[Bug #95015524] - Headers now align to logo

--- a/app/stylus/sections/nav.styl
+++ b/app/stylus/sections/nav.styl
@@ -27,14 +27,14 @@
   h1
     font:$fonts-light
     font-size:42px
-    margin:80px 0 0 90px
+    margin:80px 0 0 0
     padding:0
     text-align:left
 
   h2
     font:$fonts-bold
     font-size:18px
-    margin:0 0 20px 90px
+    margin:0 0 20px 0
     padding:0
     text-align:left
 
